# handover_sim

./: .gitignore  README.md
human_model_gazebo/: CMakeLists.txt
human_model_gazebo/config/: human_control.yaml
human_model_gazebo/launch/: view_human.launch
human_model_gazebo/rviz/: urdf.rviz
human_model_gazebo/src/: joint_configurations_middle.txt  joint_configurations_optimal.txt  joint_middle_effort.txt  joint_optimal_effort.txt  main.py  moveit_utils.py  other_main_fk.py  other_main_ik.py  sampling_joint_configurations.txt  sampling_poses.txt
human_model_gazebo/urdf/: human.urdf.xacro  human.xacro  wheel.xacro
human_sim_config/: .setup_assistant  CMakeLists.txt  package.xml
human_sim_config/config/: fake_controllers.yaml  human.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
human_sim_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  warehouse.launch  (+2 more)
mln/: learn.conf  query.conf
objects_to_handover/: CMakeLists.txt  package.xml
objects_to_handover/launch/: book.launch  bottle.launch  comb.launch  phone.launch  remote.launch
objects_to_handover/meshes/: book.dae  bottle.dae
objects_to_handover/rviz/: urdf.rviz
objects_to_handover/urdf/: book.xacro  bottle.xacro  comb.xacro  phone.xacro  remote.xacro
plot_costs/: filter_poses_for_effort.m~  main_costs.py  moveit_utils.py  plot_utils.py
(+3 files in other folders)
